deployment/kubernetes/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
  labels:
    app.kubernetes.io/name: for-your-service
    app.kubernetes.io/part-of: for-your-service
spec:
  mtls:
    mode: STRICT
