deployment/kubernetes/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: for-your-service-gateway
  namespace: default
  labels:
    app.kubernetes.io/name: for-your-service
    app.kubernetes.io/part-of: for-your-service
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "foryourservice.internal"
        - "*"
