deployment/kubernetes/istio/canary-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: for-your-service-canary-route
  namespace: default
  labels:
    app.kubernetes.io/name: for-your-service
    app.kubernetes.io/part-of: for-your-service
spec:
  hosts:
    - "foryourservice.internal"
  gateways:
    - for-your-service-gateway
  http:
    - name: canary-traffic-split
      route:
        - destination:
            host: streamlit-frontend.default.svc.cluster.local
            subset: v1
            port:
              number: 8501
          weight: 90
        - destination:
            host: streamlit-frontend.default.svc.cluster.local
            subset: v2
            port:
              number: 8501
          weight: 10
