deployment/kubernetes/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: for-your-service-route
  namespace: default
  labels:
    app.kubernetes.io/name: for-your-service
    app.kubernetes.io/part-of: for-your-service
spec:
  hosts:
    - "foryourservice.internal"
  gateways:
    - for-your-service-gateway
  http:
    - route:
        - destination:
            host: streamlit-frontend.default.svc.cluster.local
            port:
              number: 8501
